work in progress - updating Front-end dev docs to reflect change to Astro (print styles)

--- a/docs/front-end/05-css.mdx
+++ b/docs/front-end/05-css.mdx
@@ -70,7 +70,10 @@ Using the "mobile first" methodology, where default CSS rules apply to the small
 ## Print Styles
 
 <Tabs groupId="icl-versions">
-  <TabItem value="v2.0" label="ICL Version 2+ (Astro & Pattern Lab Vite/PostCSS Version)">
+  <TabItem value="v3.0" label="ICL Version 3+ (Astro)">
+    A print-specific stylesheet is in use at `src/assets/css/print.css` to disable page elements irrelevant for printing (site header, site footer, subnav, etc) and to output the url of links within page body text.
+  </TabItem>
+  <TabItem value="v2.0" label="ICL Version 2+ (Vite/PostCSS)">
     A print-specific stylesheet is in use at `source/scss/print.css` to disable page elements irrelevant for printing (site header, site footer, subnav, etc) and to output the url of links within page body text.
   </TabItem>
 
