Updating Front-end dev docs to reflect change to Astro (updating the ICL for Accelerator Projects)

--- a/docs/front-end/01-idfive-component-library.mdx
+++ b/docs/front-end/01-idfive-component-library.mdx
@@ -5,7 +5,7 @@ description: Overview of Front-end Library
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-# ICL (idfive Component Library)
+# idfive Component Library (ICL)
 
 **A collection of components to be used to begin new front-end development projects.** This library is synced-up manually to the [Drupal Accelerator](https://dev-idfive-drupal-accelerator.pantheonsite.io/) and to the [Wordpress Accelerator](https://dev-idfive-accelerator.pantheonsite.io/) sites.
 
