reformat and add client accessibiklity section

--- a/docs/front-end/images-svg-icons.mdx
+++ b/docs/front-end/images-svg-icons.mdx
@@ -22,7 +22,7 @@ import TabItem from "@theme/TabItem";
 
 - To reference an image in a component or page in json use `"../../images/image-name.jpg",`
 - Set `width` and `height` attributes for all images
-- Provide alt tags when appropriate - [see the accessibility page image section for more info](/docs/front-end/accessibility#images)
+- Provide alt tags when appropriate - [see the accessibility developer guidelines for more info](/docs/accessibility/developers#images)
 - Use the native lazy loading attribute of `loading="lazy"` except for usage in sections that will appear at the top of the page (ie, Site Header or Heroes)
 - If different assets are needed depending on viewport width, a `<picture>` tag can be used. Here's an example that can be seen in the hero component (the hero would not typically use the `loading="lazy"` attribute, but adding in for the example):
 
